Projects/httpd-pod/httpd-pod.yml
apiVersion: v1
kind: Pod
metadata:
   name: website
   labels:
      app: web

spec:
   containers:
     - name: haproxy-default-backend
       image: httpd
       ports:
       - containerPort: 80
