Projects/httpd-pod/httpd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30010
    protocol: TCP
    name: http
  selector:
   app: web
